--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="container-fluid">
-        <div class="row text-center">
+        <div class="row text-center mt-4">
             <div class="col">
                 <img src="logo.svg" alt="Platzi Game">
             </div>
